hphp/test/vm/strict_numbers.php.exp
HipHop Fatal error: syntax error, unexpected T_STRICT_ERROR in hphp/test/vm/strict_numbers.php on line 2
