hphp/test/vm/strict_numbers.php.filter
#!/bin/bash
sed -e 's/\/.*hphp/hphp/g; s/, expecting [A-Z_]*//'
